--- a/src/css/app.css
+++ b/src/css/app.css
@@ -19,3 +19,43 @@
 .h-50px {
   height: 50px;
 }
+
+.w-150px {
+  width: 150px;
+}
+
+.h-150px {
+  height: 150px;
+}
+
+.w-200px {
+  width: 200px;
+}
+
+.h-200px {
+  height: 200px;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.bottom-3 {
+  bottom: 0.75rem;
+}
+
+.right-3 {
+  right: 0.75rem;
+}
